Fixed - bug 292373: [Theming][CTabFolder] Make overflow icon themable https://bugs.eclipse.org/bugs/show_bug.cgi?id=292373

--- a/bundles/org.eclipse.rap.rwt/src/org/eclipse/swt/internal/custom/ctabfolderkit/CTabFolder.default.css
+++ b/bundles/org.eclipse.rap.rwt/src/org/eclipse/swt/internal/custom/ctabfolderkit/CTabFolder.default.css
@@ -23,3 +23,7 @@ CTabItem:selected {
 CTabItem:disabled {
   color: black;
 }
+
+CTabFolder-DropDownButton-Icon {
+  background-image: url( resource/widget/rap/ctabfolder/chevron.gif );
+}
